infra/security-groups/main.tf
variable "project_name" {}
variable "ec2_sg_name" {}
variable "vpc_id" {}
variable "ec2_node_sg_name" {}

output "sg_ec2_sg_ssh_http_id" {
  value = aws_security_group.ec2_sg_ssh_http.id
}

# output "rds_mysql_sg_id" {
#   value = aws_security_group.rds_mysql_sg.id
# }

output "sg_ec2_node_port_9000" {
  value = aws_security_group.ec2_node_port_9000.id
}

resource "aws_security_group" "ec2_sg_ssh_http" {
  name        = var.ec2_sg_name
  description = "Enable the Port 22(SSH) & Port 80(http)"
  vpc_id      = var.vpc_id

  # ssh for terraform remote exec
  ingress {
    description = "Allow remote SSH from anywhere"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  }

  # enable http
  ingress {
    description = "Allow HTTP request from anywhere"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
  }

  # enable http
  ingress {
    description = "Allow HTTP request from anywhere"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
  }

  #Outgoing request
  egress {
    description = "Allow outgoing request"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "dev-node-001 Security Groups to allow SSH(22) and HTTP(80)"
  }
}

resource "aws_security_group" "ec2_node_port_9000" {
  name        = var.ec2_node_sg_name
  description = "Enable the Port 9000 for node"
  vpc_id      = var.vpc_id

  # ssh for terraform remote exec
  ingress {
    description = "Allow 9000 port to access node"
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
  }

  tags = {
    Name = "dev-node-001 Security Groups to allow SSH(22) and HTTP(80)"
  }
}

# resource "aws_security_group" "rds_mysql_sg" {
#   name        = "rds-sg"
#   description = "Allow access to RDS from EC2 present in public subnet"
#   vpc_id      = var.vpc_id

#   ingress {
#     from_port   = 3306
#     to_port     = 3306
#     protocol    = "tcp"
#     cidr_blocks = var.public_subnet_cidr_block # replace with your EC2 instance security group CIDR block
#   }
# }
